src/styles/common.css
:root {
	--font: "Andika", sans-serif;

	--yellow-soft: #fff9f9;
	--yellow: #ffeaa4;
	--yellow-strong: #ffd13b;
	--orange: #ffa454;
	--red: #b02929;
	--blue-strong: #4349ff;
	--blue-soft: #bfc1ff;
	--txt: #240000;
	--txt-muted: #6b4c4c;
}
.dark {
	--yellow-soft: #181514;
	--yellow: #271e19;
	--yellow-strong: #5e3e0c;
	--orange: #7b4616;
	--red: #f26a6a;
	--blue-strong: #898ce7;
	--blue-soft: #1d1e39;
	--txt: #fee;
	--txt-muted: #cbb;
}

body {
	margin: 0;
	font-family: var(--font);
	background-color: var(--blue-soft);
	color: var(--txt);
	line-height: 1.4;
	font-size: 18px;
	background-image: url("/sitelen/background.svg");

	background-repeat: no-repeat;
	background-position: bottom;
	background-attachment: fixed;
	background-size: 100%;
}
.dark body {
	background-image: url("/sitelen/background-dark.svg");
}

.no-transition,
.no-transition * {
	transition: none !important;
}

* {
	box-sizing: border-box;
}

blockquote {
	width: fit-content;
	font-size: 110%;
	margin: 0px;
	padding: 10px 0;
	padding-inline: 15px 15px;
	border-inline-start: 6px solid var(--yellow-strong);
}

main {
	max-width: min(1600px, 80%);
	margin: auto;
	margin-top: 1rem;
	display: grid;
	grid-template: "right right left" / 1fr 1fr 1fr;
	column-gap: 10px;
	& > * {
		align-self: start;
	}
}

section {
	margin-bottom: 20px;
	border: 3px solid var(--yellow-strong);
	border-radius: 10px;
	padding: 10px;
	background-color: var(--yellow-soft);
	font-size: 18px;
}

footer {
	text-align: center;
	margin: 25vw auto 10px auto;
	/* Ensure background image is nicely viewable
	at all browser widths and zoom levels */
}

h1 {
	font-weight: initial;
	font-size: 200%;
	text-wrap: balance;
	text-align: center;
}
h2 {
	font-weight: initial;
	font-size: 175%;
	width: 100%;
	padding-bottom: 15px;
	border-bottom: 6px solid var(--yellow-strong);
	text-align: center;
}

a,
a:visited {
	color: var(--blue-strong);
}
svg {
	max-width: 100%;
	height: auto;
	margin: auto;
}

details {
	@supports (interpolate-size: allow-keywords) {
		--border-delay: 300ms;
	}

	interpolate-size: allow-keywords;
	margin-top: 20px;
	background-color: var(--yellow);
	border: 3px solid var(--orange);
	border-radius: 10px;

	&::details-content {
		height: 0;
		overflow: hidden;
		box-shadow: inset 0 3px 0 0 transparent;
		transition:
			opacity 300ms,
			height 300ms,
			box-shadow 0ms var(--border-delay, 0ms),
			content-visibility 300ms allow-discrete;
	}

	&[open]::details-content {
		--border-delay: 0ms;
		height: auto;
		padding-top: 3px;
		box-shadow: inset 0 3px 0 0 var(--orange);
	}

	/* Style when the details element is [open] */
	&[open]::details-content {
		height: auto;
	}

	& > summary {
		padding: 10px 15px;
		text-align: center;
		cursor: pointer;
		list-style: none;

		&::marker {
			content: "";
			display: none;
		}
		&::-webkit-details-marker {
			display: none;
		}
		&::before {
			content: "";
			background-color: var(--txt);
			width: 20px;
			height: 20px;
			mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20' fill='currentColor' class='size-5'%3E%3Cpath fill-rule='evenodd' d='M8.22 5.22a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.75.75 0 0 1-1.06-1.06L11.94 10 8.22 6.28a.75.75 0 0 1 0-1.06Z' clip-rule='evenodd' /%3E%3C/svg%3E%0A");	background-size: contain;
			background-repeat: no-repeat;
			margin-top: -0.25rem;
			margin-right: 0.25rem;
			display: inline-block;
			vertical-align: middle;
			transition: rotate 150ms;
		}
	}
	&[open] summary {
		&::before {
			rotate: 90deg;
		}
	}
	& > p {
		padding: 0px 15px;
	}
	& > ul {
		padding: 0px 15px 0px 30px;
	}
}

@media only screen and (max-width: 1200px) {
	main {
		display: block;
	}
}
@media only screen and (max-width: 750px) {
	body {
		margin: 0;
		background-attachment: scroll;
	}
	main {
		margin: 0;
		padding: 1rem;
		max-width: none;
		background-color: var(--yellow-soft);
		border-bottom: 5px solid var(--yellow-strong);
	}
	section {
		padding: 0;
		background-color: unset;
		border: none;
		border-radius: none;
		font-size: 90%;
	}
	blockquote {
		border: none;
		padding: none;
		padding-inline: none;
		text-align: center;
	}
}

img {
	max-width: 100%;
}

